:sparkles: Add generieke-resultaattypeomschrijving to the API
