# src/vrl/api/viewsets.py
@@ -1,8 +1,12 @@
 from rest_framework import viewsets
 
-from vrl.datamodel.models import CommunicatieKanaal
+from vrl.datamodel.models import (
+    CommunicatieKanaal, ResultaattypeOmschrijvingGeneriek
+)
 
-from .serializers import CommunicatieKanaalSerializer
+from .serializers import (
+    CommunicatieKanaalSerializer, ResultaattypeOmschrijvingGeneriekSerializer
+)
 
 
 class CommunicatieKanaalViewSet(viewsets.ReadOnlyModelViewSet):
@@ -12,3 +16,13 @@ class CommunicatieKanaalViewSet(viewsets.ReadOnlyModelViewSet):
     queryset = CommunicatieKanaal.objects.order_by('naam')
     serializer_class = CommunicatieKanaalSerializer
     lookup_field = 'uuid'
+
+
+class ResultaattypeOmschrijvingGeneriekViewSet(viewsets.ReadOnlyModelViewSet):
+    """
+    Raadpleeg de generieke resultaattypeomschrijvingen.
+    """
+    queryset = ResultaattypeOmschrijvingGeneriek.objects.order_by('omschrijving')
+    serializer_class = ResultaattypeOmschrijvingGeneriekSerializer
+    lookup_field = 'uuid'
+    pagination_class = None
